Cros splitscreen: Fix Chrome crash when swapping two snapped windows.

We should update the two snapped windows state and bounds at the same
time, not one by one. Otherwise it may trigger the unnecessary state
change and cause chrome crash.

Bug: 813910
Change-Id: I92cfd4986dd34323af43ec77cacfa4cce19da9ce
Reviewed-on: https://chromium-review.googlesource.com/927358
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537982}
Former-commit-id: 212e48f05bff9aeb25ed95048b632f245f501390